added handling of currency etc... with pipes + maj i18n du cz

--- a/src/app/pages/settings-integration/pricing/settings-pricing.component.html
+++ b/src/app/pages/settings-integration/pricing/settings-pricing.component.html
@@ -11,7 +11,17 @@
     {{'settings.activation_contact_msg' | translate}}
   </div>
 </div>
-<!-- Convergent Charging Pricing -->
-<app-settings-convergent-charging *ngIf="isActive && pricingSettings?.type === 'convergentCharging'" [pricingSettings]="pricingSettings" [formGroup]="formGroup"></app-settings-convergent-charging>
-<!-- Pricing Definitions -->
-<app-pricing-definitions *ngIf="isActive && pricingSettings?.type === 'simple' && isTestTenant" [inDialog]="false" [currentPricingDefinitionID]="currentPricingDefinitionID" [currentEntityID]="currentEntityID" [currentEntityType]="currentEntityType"></app-pricing-definitions>
+<form *ngIf="isActive" class="form" [formGroup]="formGroup">
+  <div class="mat-toolbar-row mat-toolbar-settings">
+    <button mat-raised-button color="warn" (click)="save(formGroup.value)"
+      [disabled]="!formGroup.valid || !formGroup.dirty">
+      <mat-icon>save</mat-icon><span>{{'general.save' | translate}}</span>
+    </button>
+  </div>
+  <!-- Pricing Settings -->
+  <app-settings-simple-pricing *ngIf="isActive && pricingSettings?.type === 'simple'" [pricingSettings]="pricingSettings" [formGroup]="formGroup"></app-settings-simple-pricing>
+  <!-- Convergent Charging Pricing -->
+  <app-settings-convergent-charging *ngIf="isActive && pricingSettings?.type === 'convergentCharging'" [pricingSettings]="pricingSettings" [formGroup]="formGroup"></app-settings-convergent-charging>
+  <!-- Pricing Definitions -->
+  <app-pricing-definitions *ngIf="isActive && pricingSettings?.type === 'simple' && isTestTenant" [inDialog]="false" [currentPricingDefinitionID]="currentPricingDefinitionID" [currentEntityID]="currentEntityID" [currentEntityType]="currentEntityType"></app-pricing-definitions>
+</form>
